# subsnitch

./: .gitignore  README.md  pyproject.toml
subsnitch/: __main__.py
