[tool.poetry]
name = "subsnitch"
version = "0.0.1"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
authors = ["Tyler Bennett <tbennett6421@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tbennett6421/subsnitch"
repository = "https://github.com/tbennett6421/subsnitch"
exclude = ["tests"]
include = ["LICENSE"]
license = ""
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]

packages = [
    { include = "subsnitch"}
]

[tool.poetry.scripts]
subsnitch = 'subsnitch.__main__:main'

[tool.poetry.dependencies]
#python = "^3.8.0"
python = ">=3.8.0,<3.12.0"
ffmpeg-python = "^0.2.0"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
